--- a/portfolio/src/components/Projects/ProjectCard.module.css
+++ b/portfolio/src/components/Projects/ProjectCard.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 20px;
   background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
   box-shadow: 0 16px 14px 0 #04152d;
   padding: 18px 24px;
@@ -12,7 +12,6 @@
 
 .container:hover{
   transform: scale(1.02);
-  cursor: pointer;
 }
 
 .image {
@@ -57,6 +56,11 @@
   justify-content: space-around;
 }
 
+.links:hover{
+  cursor: pointer;
+  color: #fafafd;
+}
+
 .link {
   text-decoration: none;
   color: var(--color-text);
@@ -65,4 +69,8 @@
   border-radius: 100px;
   background: var(--color-primary);
   padding: 1px 22px;
+}
+.link:hover{
+  cursor: pointer;
+  color: #fbfcfe;
 }
