--- a/portfolio/src/components/Contact/Contact.module.css
+++ b/portfolio/src/components/Contact/Contact.module.css
@@ -2,24 +2,25 @@
 
 .container {
   color: var(--color-text);
-  margin-top: 120px;
+  margin-top: 100px;
   background-color: var(--color-secondary);
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   width: 100vw;
-  padding: 58px 10%;
+  padding: 30px;
   gap: 10px;
+  position: relative;
 }
 
 .text h2 {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
   letter-spacing: 4px;
 }
 
 .text p {
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 400;
   letter-spacing: 2px;
 }
@@ -41,7 +42,7 @@
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 400;
   letter-spacing: 1.5px;
 }
