--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -9,6 +9,7 @@
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 8%;
 }
 
 .content {
@@ -45,10 +46,11 @@
   background-color: var(--color-primary);
   color: var(--color-text);
   border-radius: 100px;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  
 }
 
 .contactBtn:last-child {
